--- a/TaskList/style.css
+++ b/TaskList/style.css
@@ -11,7 +11,7 @@ body{
     max-width: 400px;
     width: 100%;
     background-color: #333;
-    margin: 100px auto;
+    margin: 80px auto 0;
     font-size: 20px;
     padding: 20px;
     border-radius: 10px;
@@ -39,9 +39,13 @@ body{
     width: fit-content;
     margin-left: 25px;
     font-size: 25px;
+    pointer-events: none;
+    opacity: 0.6    ;
 }
-.add-btn:hover, .search-btn:hover{
+.add-btn.active, .search-btn.active{
+    pointer-events: auto;
     cursor: pointer;
+    opacity: 1;
     text-shadow: 4px 4px 0 #c20440,-4px -4px 0 #1fceab;
     transition: .5s;
 }
