--- a/TaskList/style.css
+++ b/TaskList/style.css
@@ -42,7 +42,7 @@ body{
     pointer-events: none;
     opacity: 0.6    ;
 }
-.add-btn.active, .search-btn.active{
+.add-btn.active, .search-btn:hover{
     pointer-events: auto;
     cursor: pointer;
     opacity: 1;
