--- a/GithubSearch/style.css
+++ b/GithubSearch/style.css
@@ -14,6 +14,7 @@ body{
     margin: 150px auto 0;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 4px 4px 0 #c20440,-4px -4px 0 #1fceab;
 }
 .header{
     margin-bottom: 15px;
